[package]
name = "raider-server"
version = "1.2.3"
description = "Affiliates dashboard. Used by affiliates to generate tracking codes and review their balance."
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/valeriansaliou/raider"
repository = "https://github.com/valeriansaliou/raider.git"
keywords = ["affiliates", "dashboard", "sales", "tracker"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]
exclude = ["dev/*"]
edition = "2021"

[[bin]]
name = "raider"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.3"
clap = { version = "2.29", default-features = false }
lazy_static = "1.3"
sha2 = "0.7"
time = "0.1"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
base64 = "0.6"
validate = "0.6"
url_serde = { version = "0.2", default-features = false }
chrono = { version = "0.4", default-features = false }
native-tls = { version = "0.2", features = ["vendored"] }
openssl-probe = "0.1"
lettre = { version = "0.9", features = ["smtp-transport"] }
lettre_email = "0.9"
rocket = { version = "0.5", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
diesel = { version = "2.2", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "numeric",
    "r2d2",
] }
r2d2 = "0.8"
reqwest = { version = "0.12", features = [
    "native-tls-vendored",
    "blocking",
    "gzip",
    "json",
] }
bigdecimal = "0.4"
num-traits = "0.2"
separator = "0.3"
iso_country = "0.1"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
